--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="caixa-principal">
         <h1>Você decide o futuro da IA</h1>
-        <h2>♠️ Prof.Rafael ♠️</h2>
+        <h2>♠️ Maria ♠️</h2>
         <div class="tela-inicial">
             <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
                 De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
